[package]
name = "provlegisto"
version = "0.0.0"
description = "A simple IDE for ACMer"
authors = ["mslxl"]
license = "agpl"
repository = "mslxl/provlegisto"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all",
  "path-all",
  "dialog-all",
  "fs-all",
  "shell-open",
  "devtools",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.5.0"
tokio-tungstenite = "0.20.1"
tokio = { version = "1.34.0", features = ["full"] }
log = { version = "0.4.20", features = ["serde", "std"] }
anyhow = "1.0.75"
async-trait = "0.1.74"
futures-util = { version = "0.3.29", features = ["tokio-io"] }
dunce = "1.0.4"
tempfile = "3.8.1"
rand = "0.8.5"
sha256 = "1.4.0"
once_cell = "1.18.0"
fancy-regex = "0.12.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
gethostname = "0.4.3"
which = "5.0.0"
toml = "0.8.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
