[package]
name = "algorimejo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "algorimejo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whoami = "1.6.0"
specta = { version = "=2.0.0-rc.22", features = ["uuid", "url", "serde", "serde_json", "time", "bigdecimal", "chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde_bytes = "0.11"
tauri-plugin-log = "2"
anyhow = "1.0.98"
uuid = { version = "1.8", features = ["v4", "serde"] }
toml = "0.9.2"
log = "0.4.27"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }

